--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,42 +1,30 @@
-name: Docker Build and Push
+name: Build and Push Docker Image
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: 
+    push:
+        branches:
+            - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build-and-pussh:
+        runs-on: Ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
 
-    steps:
-    # 1. Chequear el repositorio
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    # 2. Configurar Docker para usar el demonio
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    # 3. Autenticarse en Docker Hub
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    # 4. Construir la imagen Docker
-    - name: Build Docker image
-      run: |
-        docker build -t myapp:${{ github.sha }} .
-
-    # 5. Publicar la imagen en Docker Hub
-    - name: Push Docker image to Docker Hub
-      run: |
-        docker tag myapp:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
-        docker push ${{ secrets.DOCKER_USERNAME }}/myapp:${{ github.sha }}
-
-    
+            - name: Set up Docker Buildx
+              uses: docker/setup-builds-action@v2
+            
+            - name: Log in to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                username: ${{ secrets.DOCKER_HUB_USERNAME }}
+                password: ${{ secrets.DOCKER_HUB_TOKEN }}
+            
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v4
+              with:
+                context: .
+                push: true
+                platforms: linux/amd64, linux/arm64
+                tags: ${{ secrets.DOCKER_HUB_USERNAME }}/nodejs-helloworld-api:latest
