--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,14 +6,15 @@ on:
             - main
 
 jobs:
-    build-and-pussh:
-        runs-on: Ubuntu-latest
+    build-and-push:
+        runs-on: ubuntu-latest
+
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
 
             - name: Set up Docker Buildx
-              uses: docker/setup-builds-action@v2
+              uses: docker/setup-buildx-action@v2
             
             - name: Log in to Docker Hub
               uses: docker/login-action@v2
